syntax = "proto3";

package models;

message Employee {
    int32 id = 1;
    string firstName = 2;
    string lastName = 3;
    Gender gender = 4;
    string birthDate = 5;
    string hireDate = 6;

    enum Gender {
        M = 0;
        F = 1;
    }

}